Add Base structure